--- a/YourPeopleFE/YourPeopleFE/src/app/components/header/header.component.html
+++ b/YourPeopleFE/YourPeopleFE/src/app/components/header/header.component.html
@@ -7,10 +7,10 @@
   <nav>
     <button routerLink="/">Home</button>
     <button routerLink="/groups">Groups</button>
-    <button routerLink="/login">Login</button>
-    <button routerLink="/register">Register</button>
+    <button *ngIf="!logged" routerLink="/login">Login</button>
+    <button *ngIf="!logged" routerLink="/register">Register</button>
     <button routerLink="/friends">Friends</button>
     <button routerLink="/profile">Profile</button>
-    <button >Logout</button>
+    <button *ngIf="logged" (click)="logout()">Logout</button>
   </nav>
 </header>
