--- a/YourPeopleFE/YourPeopleFE/src/app/components/header/header.component.html
+++ b/YourPeopleFE/YourPeopleFE/src/app/components/header/header.component.html
@@ -1,15 +1,18 @@
 <header class="app-header">
   <div class="logo">|Your:People|</div>
-  <div class="search-bar">
-    <input type="text" placeholder="Search...">
-    <button>Search</button>
+  <div *ngIf="logged" class="search-bar">
+    <input type="text" placeholder="Search..." [(ngModel)]="searchInput">
+    <button (click)="search(searchInput)">Search</button>
   </div>
   <nav>
-    <button *ngIf="logged" routerLink="/home">Home</button>
-    <button *ngIf="logged" routerLink="/groups">Groups</button>
+    <button *ngIf="logged && admin" routerLink="/users-admin">All Users</button>
+    <button *ngIf="logged && admin" routerLink="/groups-admin">All Groups</button>
+    <button *ngIf="logged && user" routerLink="/home">Home</button>
+    <button *ngIf="logged && user" routerLink="/groups">Groups</button>
+    <button *ngIf="logged && user" routerLink="/friend-reqs">Friend Requests</button>
     <button *ngIf="!logged" routerLink="/login">Login</button>
     <button *ngIf="!logged" routerLink="/register">Register</button>
-    <button *ngIf="logged" routerLink="/friends">Friends</button>
+    <button *ngIf="logged && user" routerLink="/friends">Friends</button>
     <button *ngIf="logged" routerLink="/profile">Profile</button>
     <button *ngIf="logged" (click)="logout()">Logout</button>
   </nav>
