--- a/YourPeopleFE/YourPeopleFE/src/app/components/acc/profile/profile.component.html
+++ b/YourPeopleFE/YourPeopleFE/src/app/components/acc/profile/profile.component.html
@@ -1,6 +1,10 @@
 <div class="profile-container">
   <div class="profile-box">
-    <div *ngIf="editToggle">
+    <div class="input-group">
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username" value="{{user.username}}" readonly>
+    </div>
+    <div *ngIf="!editToggle && !passToggle">
       <div class="input-group">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" value="{{user.name}}" readonly>
@@ -8,11 +12,6 @@
       <div class="input-group">
         <label for="surname">Surname</label>
         <input type="text" id="surname" name="surname" value="{{user.surname}}" readonly>
-      </div>
-
-      <div class="input-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" value="{{user.username}}" readonly>
       </div>
 
       <div class="input-group">
@@ -26,55 +25,89 @@
       </div>
 
       <button (click)="editProfileToggle()" class="edit-btn">Change Info</button>
+      <button (click)="passChangeToggle()" class="passChange-btn">Change Password</button>
     </div>
     <div *ngIf="editToggle">
-      <form [formGroup]="editForm" ]>
+      <form [formGroup]="editForm" (ngSubmit)="AcceptEdit()">
         <div class="input-group">
           <label for="name">Name</label>
-          <input type="text" id="nameEdit" name="nameEdit" value="{{user.name}}">
+          <input type="text" id="nameEdit" name="nameEdit" [formControlName]="'nameEdit'">
           <span *ngIf="!editForm.get('nameEdit')?.valid && editForm.get('nameEdit')?.touched"
                 class="help-block">This field must be filled </span>
         </div>
         <div class="input-group">
           <label for="surname">Surname</label>
-          <input type="text" id="surnameEdit" name="surnameEdit" value="{{user.surname}}">
+          <input type="text" id="surnameEdit" name="surnameEdit" [formControlName]="'surnameEdit'">
           <span *ngIf="!editForm.get('surnameEdit')?.valid && editForm.get('surnameEdit')?.touched"
                 class="help-block">This field must be filled </span>
         </div>
 
         <div class="input-group">
-          <label for="username">Username</label>
-          <input type="text" id="usernameEdit" name="usernameEdit" value="{{user.username}}">
-          <span *ngIf="!editForm.get('usernameEdit')?.valid && editForm.get('usernameEdit')?.touched"
-                class="help-block">This field must be filled </span>
-        </div>
-
-        <div class="input-group">
           <label for="email">Email</label>
-          <input type="text" id="emailEdit" name="emailEdit" value="{{user.email}}">
+          <input type="text" id="emailEdit" name="emailEdit" [formControlName]="'emailEdit'">
           <span *ngIf="!editForm.get('emailEdit')?.valid && editForm.get('emailEdit')?.touched"
                 class="help-block">This field must be filled </span>
         </div>
 
         <div class="input-group">
           <label for="desc">Description</label>
-          <input type="text" id="descEdit" name="descEdit" value="{{user.description}}">
+          <input type="text" id="descEdit" name="descEdit" [formControlName]="'descEdit'">
           <span *ngIf="!editForm.get('descEdit')?.valid && editForm.get('descEdit')?.touched"
                 class="help-block">This field must be filled </span>
         </div>
 
-        <button (click)="AcceptEdit()" class="edit-btn">Save</button>
+        <button type="submit" class="edit-btn">Save</button>
       </form>
       <button (click)="editProfileToggle()" class="edit-btn">Cancel</button>
     </div>
+    <div *ngIf="passToggle">
+      <form [formGroup]="passForm" (ngSubmit)="ChangePass()">
+        <div class="input-group">
+          <label for="name">Enter your old password:</label>
+          <input type="password" id="oldPass" name="oldPass" [formControlName]="'oldPass'">
+          <span *ngIf="!editForm.get('oldPass')?.valid && editForm.get('oldPass')?.touched"
+                class="help-block">This field must be filled </span>
+        </div>
+        <div class="input-group">
+          <label for="surname">New password:</label>
+          <input type="password" id="newPass1" name="newPass1" [formControlName]="'newPass1'">
+          <span *ngIf="!editForm.get('newPass1')?.valid && editForm.get('newPass1')?.touched"
+                class="help-block">This field must be filled </span>
+        </div>
+
+        <div class="input-group">
+          <label for="email">Repeat new password</label>
+          <input type="password" id="newPass2" name="newPass2" [formControlName]="'newPass2'">
+          <span *ngIf="!editForm.get('newPass2')?.valid && editForm.get('newPass2')?.touched"
+                class="help-block">This field must be filled </span>
+        </div>
+        <button type="submit" class="edit-btn">Change</button>
+      </form>
+      <button (click)="passChangeToggle()" class="pass-btn">Cancel</button>
+    </div>
   </div>
   <div class="user-group-box">
-    <div><h2>Your groups</h2></div>
-    <div *ngFor="let group of groups">
+    <div><h2>Groups by you</h2></div>
+    <div *ngFor="let groupByYou of groupsByYou">
       <div class="group-bar">
-        <a class="group-name">{{ group.name }}</a>
-        <p class="group-desc">Description: {{ group.description}}</p>
+        <a class="group-name">{{ groupByYou.name }}</a>
+        <p class="group-desc">Description: {{ groupByYou.description}}</p>
       </div>
+    </div>
+  </div>
+  <div class="user-group-box">
+    <div><h2>Joined groups</h2></div>
+    <div *ngFor="let yourGroup of yourGroups">
+      <div class="group-bar">
+        <a class="group-name">{{ yourGroup.name }}</a>
+        <p class="group-desc">Description: {{ yourGroup.description}}</p>
+      </div>
+    </div>
+  </div>
+  <div>
+    <div><h2>Your posts</h2></div>
+    <div *ngFor="let post of posts">
+      <app-posts [post]="post"></app-posts>
     </div>
   </div>
 </div>
