--- a/YourPeopleFE/YourPeopleFE/src/app/components/content/posts/posts.component.html
+++ b/YourPeopleFE/YourPeopleFE/src/app/components/content/posts/posts.component.html
@@ -1,26 +1,28 @@
 <div>
 <!--  user info and group info-->
   <div class="user-info">
-    <img src="user-placeholder.jpg" alt="User Photo">
-    <a class="username">{{ post?.username }}</a>
+<!--    <img src="user-placeholder.jpg" alt="User Photo">-->
+    <p class="username">{{ post?.username }}</p>
     <p class="group-name">Posted in {{ post?.groupName }}</p>
   </div>
-<!--  post content-->
   <div>
     <p class="post-content">{{ post?.content }}</p>
   </div>
+<!--  post content-->
   <div class="reactions">
     <button (click)="reactLike()"><img src="assets/reactionIcons/like.png" alt="Like"></button>
-    <button (click)="reactLaugh()"><img src="assets/reactionIcons/laugh.png" alt="Laugh"></button>
+    <button (click)="reactDislike()"><img src="assets/reactionIcons/laugh.png" alt="Laugh"></button>
     <button (click)="reactLove()"><img src="assets/reactionIcons/love.png" alt="Love"></button>
-    <span>{{ post?.reactionNum }} Reactions</span>
+    <span>{{ post?.reactionStat }} Reactions</span>
   </div>
-  <button (click)="openComments()">Open Comments</button>
+  <button class="open-comments-btn" (click)="openComments()">Open Comments</button>
 <!--comments auto closed, oppened when toggled above-->
   <div *ngIf="commentToggle">
     <h2>Comments</h2>
     <div>
-      <app-comments [post]="post"></app-comments>
+      <app-comments [post]="post?.id"></app-comments>
     </div>
+    <input class="comment" type="text" [(ngModel)]="commentInput">
+    <button (click)="commentOnPost()">Comment</button>
   </div>
 </div>
