--- a/YourPeopleFE/YourPeopleFE/src/app/components/content/group-explore/group-explore.component.html
+++ b/YourPeopleFE/YourPeopleFE/src/app/components/content/group-explore/group-explore.component.html
@@ -1,5 +1,6 @@
 <div class="groups-maindiv">
   <div class="groups">
+    <div class="button-div"><a href="http://localhost:4200/create-group"><button class="create-btn">Create your group</button></a></div>
     <div><h2>Explore new groups</h2></div>
     <div *ngFor="let group of groupsExplore">
       <div class="group-bar">
