--- a/YourPeopleFE/YourPeopleFE/src/app/components/acc/profile/profile.component.css
+++ b/YourPeopleFE/YourPeopleFE/src/app/components/acc/profile/profile.component.css
@@ -117,5 +117,21 @@ h2 {
 .group-name{
   text-decoration: underline;
 }
-
+.create-group-box{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+.create-btn{
+  background-color: #27ae60; /* Green button color */
+  color: #ecf0f1; /* Light text color */
+  align-self: center;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+  margin-left: 15px;
+}
 
