--- a/YourPeopleFE/YourPeopleFE/src/app/components/content/user-bar/user-bar.component.html
+++ b/YourPeopleFE/YourPeopleFE/src/app/components/content/user-bar/user-bar.component.html
@@ -1,1 +1,12 @@
-<p>user-bar works!</p>
+<div class="this-body">
+  <div class="username-box">
+    <img src="assets/imgs/profile.png" alt="profilepic">
+    <h3>{{user?.username}}</h3>
+  </div>
+  <div class="name-surname-box">
+    <p>{{user?.name}} {{user?.surname}}</p>
+  </div>
+  <div>
+    <button (click)="gotoProfile(user?.username)">Visit Profile</button>
+  </div>
+</div>
